Sat Apr 21 17:03:00 CEST 2012  John Tytgat  <John.Tytgat@aaug.net>

	* som_runcom.c (command_run): Don't call __builtin_unreachable, this
	is only known to gcc 4.4 or later.

Tue Apr 10 01:59:38 CEST 2012  John Tytgat  <John.Tytgat@aaug.net>

	* som_os_swis.h (ddeutils_get_cl_size): Change return type into size_t.
	* som_runcom.c (command_run): Minor optimisation concerning dde
	handling.  Call OS_FSControl,2 before loading ELF data in
	application memory and introduce a point of no return for error
	reporting.  Solves bug #224.

Sun Apr  8 19:01:47 BST 2012  Lee Noar  <leenoar@sky.com>

	* som_runcom.c(register_client): Fix uninitialised member
	of som_objinfo structure.

Sat Apr  7 20:01:05 CEST 2012  John Tytgat  <John.Tytgat@aaug.net>

	* Makefile.am (CMUNGEFLAGS): Add PACKAGE_VERSION define.
	* somanager.cmhg (help-string): Use PACKAGE_VERSION for
	version number (which get defined from configure.ac).

Sun Sep 19 12:11:03 CEST 2010  John Tytgat  <John.Tytgat@aaug.net>

	* som_runcom.c(command_run): Update comments.

Sat Sep 10 18:46:57 CEST 2010  John Tytgat  <John.Tytgat@aaug.net>

	* configure.ac: Require autoconf 2.64 at least.

Sun Jan 10 17:06:20 CET 2010  John Tytgat  <John.Tytgat@aaug.net>

	* somanager.cmhg: Increase version number to 2.03 as
	changes were made since GCCSDK GCC 4.1.1 Release 2.

Sun Jan 10 13:36:01 2010  Lee Noar  <leenoar@sky.com>

	* som_history.c(som_history_add_client): Remove
	unused variable.
	* somanager.cmhg: Remove unused errors.
	Rename somerr_dl_no_got to somerr_no_got_loader.
	Add somerr_no_got_client, somerr_no_seg_client,
	somerr_no_seg_loader.
	* som_runcom.c(register_dynamic_loader, register_client):
	The dynamic segment always seems to follow the R/W
	segment, however don't rely on it. Use two independent
	loops to find the required segments in the right order.
	Small improvements to error checking.

Sun Nov 22 16:06:14 2009  Lee Noar  <leenoar@sky.com>

	* som_register.c(deregister_shared_object): Don't